@startuml
interface Iterator {
    hasNext()
    next()
    remove()
}

class DinerMenuIterator implements Iterator {
    hasNext()
    next()
    remove()
}

class DinerMenu implements Menu {
    menuItems
    createIterator()
}

class PancakeHouseMenu implements Menu {
    menuItems
    createIterator()
}

DinerMenu --> DinerMenuIterator
PancakeHouseMenu --> Iterator

Waitress --> Menu
Waitress --> Iterator
@enduml